--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#1f6fd0",
-		"activityBar.background": "#1f6fd0",
+		"activityBar.activeBackground": "#5c0fd8",
+		"activityBar.background": "#5c0fd8",
 		"activityBar.foreground": "#e7e7e7",
 		"activityBar.inactiveForeground": "#e7e7e799",
-		"activityBarBadge.background": "#ee90bb",
-		"activityBarBadge.foreground": "#15202b",
+		"activityBarBadge.background": "#d1590e",
+		"activityBarBadge.foreground": "#e7e7e7",
 		"commandCenter.border": "#e7e7e799",
-		"sash.hoverBorder": "#1f6fd0",
-		"statusBar.background": "#1857a4",
+		"sash.hoverBorder": "#5c0fd8",
+		"statusBar.background": "#480ca8",
 		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#1f6fd0",
-		"statusBarItem.remoteBackground": "#1857a4",
+		"statusBarItem.hoverBackground": "#5c0fd8",
+		"statusBarItem.remoteBackground": "#480ca8",
 		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#1857a4",
+		"titleBar.activeBackground": "#480ca8",
 		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#1857a499",
+		"titleBar.inactiveBackground": "#480ca899",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "#1857a4"
+	"peacock.color": "#480ca8"
 }
